<resources>
    <string name="app_name">HypoCoin</string>

    <!-- Navigation Bar-->
    <string name="nav_bar_home">Home</string>
    <string name="nav_bar_settings">Settings</string>
    <string name="nav_bar_account">Account</string>
    <string name="nav_bar_timeline">Currencies</string>

    <!-- UserProfile -->
    <string name="password">Password</string>
    <string name="email">email</string>
    <string name="username">username</string>
    <string name="login_title">Login</string>
    <string name="register">register</string>
    <string name="no_account_register"><u>I don\'t have an account, register</u></string>
    <string name="error_username_required">Username Required</string>
    <string name="error_password_cannot_be_empty">Password cannot be empty</string>
    <string name="error_passwords_does_not_match">Passwords does not match</string>
    <string name="error_cannot_register">Register Error</string>
    <string name="error_username_already_exists">Username already exists</string>
    <string name="hyperlink">By continuing you are confirming that you accept our <a href="https://hypo-coin.web.app/termsandconditions.html">Terms &amp; Conditions</a> and have read and understand our <a href="https://hypo-coin.web.app/privacypolicy.html">Privacy Policy</a></string>
    <string name="or">or</string>
    <string name="continue_str">Continue</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="content_desc_hypocoin_icon">Hypocoin application icon</string>
    <string name="register_success">SUCCESSFULLY REGISTERED</string>
    <string name="login">Login</string>
    <string name="register_toolbar_title">Register</string>
    <string name="signup_first">Don\'t have an account?</string>
    <string name="signup_second">Sign up</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="error_password_incorrect">Password incorrect</string>
    <string name="error_email_does_not_exists">There is no account associated with this email</string>
    <string name="error_login_failed">Login failed</string>
    <string name="error_invalid_email">Email format is invalid</string>
    <string name="title_dialog_register_with_google">Register With Google?</string>
    <string name="message_dialog_register_with_google">This email %s is not registered with this app before, do you want to continue?</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_password">Please confirm your password</string>
    <string name="error_invalid_password">password is not valid</string>
    <string name="balance">Balance</string>
    <string name="net_worth">Net Worth</string>
    <string name="assets">Assets</string>
    <string name="content_desc_no_asset_exists">No Asset Exists</string>
    <string name="dollar_amount">$%s</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="withdraw">Withdraw</string>
    <string name="exchange">Exchange</string>
    <string name="deposit">Deposit</string>
    <string name="no_assets_image_text">You have no assets yet</string>
    <string name="invest_button_text">Invest to Currencies</string>
    <string name="no_multi_factor_method">No MultiFactor methods used</string>
    <string name="no_phone_number">No phone number associated with this account</string>
    <string name="email_verified">Verified</string>
    <string name="email_not_verified">Not verified</string>
    <string name="account_security_title">Security</string>
    <string name="account_email_title">Email</string>
    <string name="account_phone_number_title">Phone Number</string>
    <string name="account_last_login_title">Last Login</string>
    <string name="account_created_at_title">Created At</string>
    <string name="button_logout_title">Logout</string>
    <string name="button_send_verification_email">Send Verification Email</string>
    <string name="edit">Edit</string>
    <string name="change_password">Change Password</string>
    <string name="content_desc_profile_picture">Profile Picture</string>
    <string name="verification_email_sent">Verification Email is sent, please check your inbox</string>
    <string name="verification_email_fail">Verification email could not sent</string>
    <string name="error_updating_display_name">Error updating display name</string>
    <string name="error_updating_email">Error updating email</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="display_name">Display Name</string>
    <string name="feature_not_supported">This feature is currently not supported</string>
    <string name="positive_rate">+%%%s</string>
    <string name="negative_rate">-%%%s</string>
    <string name="deposit_amount">Deposit Amount</string>
    <string name="deposit_daily_limit">Daily Limit is $1000</string>
    <string name="dollar_50">$50</string>
    <string name="dollar_100">$100</string>
    <string name="dollar_250">$250</string>
    <string name="dollar_500">$500</string>
    <string name="error_insufficient_funds">insufficient funds</string>
    <string name="deposit_success">Deposit Successful</string>
    <string name="withdraw_amount">Withdraw Amount</string>
    <string name="dollar_all_in">All In</string>
    <string name="favourite">Favourite</string>
    <string name="sell">Sell</string>
    <string name="buy">Buy</string>
    <string name="title_percent_down">Percent Down</string>
    <string name="title_days">Days</string>
    <string name="title_date">Date</string>
    <string name="title_price">Price</string>
    <string name="title_all_time_high">All Time High</string>
    <string name="title_wallet">Wallet</string>
    <string name="title_current_value">Current Value</string>
</resources>