<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_bar_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_setting"
        android:icon="@drawable/ic_setting"
        android:title="@string/nav_bar_settings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/currency_fragment"
        android:icon="@drawable/ic_timeline"
        android:title="@string/nav_bar_timeline"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/login_fragment"
        android:icon="@drawable/ic_outline_person"
        android:title="@string/nav_bar_account"
        app:showAsAction="ifRoom" />
</menu>