<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageNoAsset"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/content_desc_no_asset_exists"
        android:src="@drawable/assets"
        app:layout_constraintBottom_toTopOf="@id/textFieldNoAsset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textFieldNoAsset"
        style="@style/TextAppearance.Material3.BodyMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/no_assets_image_text"
        app:layout_constraintBottom_toTopOf="@id/buttonInvestCTA"
        app:layout_constraintEnd_toEndOf="@+id/imageNoAsset"
        app:layout_constraintStart_toStartOf="@+id/imageNoAsset"
        app:layout_constraintTop_toBottomOf="@+id/imageNoAsset" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonInvestCTA"
        style="@style/Widget.Material3.Button.TonalButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/invest_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageNoAsset"
        app:layout_constraintStart_toStartOf="@+id/imageNoAsset"
        app:layout_constraintTop_toBottomOf="@+id/textFieldNoAsset" />
</androidx.constraintlayout.widget.ConstraintLayout>