<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.aslansari.hypocoin.account.login.ui.LoginViewModel" />

        <variable
            name="isDark"
            type="boolean" />

        <variable
            name="email"
            type="String" />

        <variable
            name="password"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@{isDark ? @drawable/main_gradient_dark : @drawable/main_gradient}"
        tools:context="com.aslansari.hypocoin.account.register.ui.RegisterResultFragment">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="@string/login_title" />

        <ProgressBar
            android:id="@+id/progressLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/icon_hypocoin"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/ic_hypo_coin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textFieldEmailTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="30dp"
            android:text="@string/email"
            android:textAppearance="?attr/textAppearanceOverline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon_hypocoin" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textFieldEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{email}"
            android:textAppearance="?attr/textAppearanceTitleLarge"
            app:layout_constraintStart_toStartOf="@id/textFieldEmailTitle"
            app:layout_constraintTop_toBottomOf="@id/textFieldEmailTitle"
            tools:text="aslansari.dev@gmail.com" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textFieldEmail"
            app:layout_constraintVertical_bias="0.2"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="@={password}"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonLogin"
            android:layout_width="140dp"
            android:layout_height="55dp"
            android:layout_margin="30dp"
            android:text="@string/login"
            android:textAppearance="@style/TextAppearance.Button"
            android:onClick="@{() -> vm.onLoginClick(email, password)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textFieldPassword" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonForgotPassword"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:onClick="@{() -> vm.onForgotPasswordClick(email)}"
            android:text="@string/forgot_your_password"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
