<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="accountId"
            type="String" />
        <variable
            name="vm"
            type="com.aslansari.hypocoin.account.login.LoginViewModel" />
        <import type="android.view.View" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".account.login.ui.LoginFragment">

        <ProgressBar
            android:id="@+id/progressLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateTint="@color/amber_800"
            android:visibility="@{vm.loading ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvAccountTitle"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="3dp"
            android:text="Account ID"
            android:textAppearance="@style/TextAppearance.Caption"
            app:layout_constraintBottom_toTopOf="@+id/etAccountId"
            app:layout_constraintStart_toStartOf="@id/etAccountId"
            tools:text="Account ID" />

        <EditText
            android:id="@+id/etAccountId"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:enabled="@{!vm.loading}"
            android:text="@={vm.accountId}"
            android:hint="@string/nav_bar_timeline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonLogin"
            android:layout_width="120dp"
            android:layout_height="55dp"
            android:layout_margin="5dp"
            android:text="@string/login_title"
            android:enabled="@{vm.loginButtonEnabled}"
            android:textAppearance="@style/TextAppearance.Button"
            android:onClick="@{() -> vm.loginClicked(vm.accountId)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etAccountId" />


        <TextView
            android:id="@+id/tvRegisterRequest"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="40dp"
            android:text="@string/no_account_register"
            android:textAppearance="@style/TextAppearance.Caption"
            android:textColor="@color/amber_900"
            android:onClick="@{() -> vm.registerClicked()}"
            app:layout_constraintEnd_toEndOf="@id/etAccountId"
            app:layout_constraintStart_toStartOf="@id/etAccountId"
            app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>